<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:srcCompat="@drawable/side_nav_bar"
        tools:layout_editor_absoluteX="141dp"
        tools:layout_editor_absoluteY="412dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:text="@string/check_maps"
        android:textColor="#ffff"
        android:textSize="30sp"
        android:textStyle="italic|bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.constraint.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:id="@+id/constr"
        android:layout_marginTop="36dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3">

        <SurfaceView
            android:id="@+id/surface"
            android:layout_width="0dp"
            android:layout_height="260dp"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            app:layout_constraintEnd_toEndOf="@id/constr"
            app:layout_constraintStart_toStartOf="@id/constr"
            app:layout_constraintTop_toTopOf="@id/constr" />

        <ImageButton
            android:id="@+id/floorUpBtn"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_marginStart="80dp"
            android:layout_marginLeft="80dp"
            android:background="@null"
            android:scaleType="fitCenter"
            android:text="@string/up"
            app:layout_constraintStart_toStartOf="@+id/surface"
            app:layout_constraintTop_toBottomOf="@+id/surface"
            app:srcCompat="@drawable/icon_arrow_up" />

        <ImageButton
            android:id="@+id/floorDownBtn"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_marginEnd="80dp"
            android:layout_marginRight="80dp"
            android:background="@null"
            android:scaleType="fitCenter"
            android:text="@string/down"
            app:layout_constraintBottom_toBottomOf="@+id/floorUpBtn"
            app:layout_constraintEnd_toEndOf="@+id/surface"
            app:layout_constraintTop_toBottomOf="@+id/surface"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/icon_arrow_down" />



    </android.support.constraint.ConstraintLayout>


</android.support.constraint.ConstraintLayout>